--- a/usage.ipynb
+++ b/usage.ipynb
@@ -19,8 +19,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-21T07:30:51.329026Z",
-     "start_time": "2022-06-21T07:30:51.083474Z"
+     "end_time": "2022-06-21T07:57:01.461712Z",
+     "start_time": "2022-06-21T07:57:01.220074Z"
     }
    },
    "outputs": [],
@@ -43,8 +43,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-21T07:30:51.334403Z",
-     "start_time": "2022-06-21T07:30:51.331922Z"
+     "end_time": "2022-06-21T07:57:01.466563Z",
+     "start_time": "2022-06-21T07:57:01.464138Z"
     }
    },
    "outputs": [],
@@ -73,8 +73,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-21T07:30:51.350717Z",
-     "start_time": "2022-06-21T07:30:51.336214Z"
+     "end_time": "2022-06-21T07:57:01.482419Z",
+     "start_time": "2022-06-21T07:57:01.468360Z"
     },
     "scrolled": true
    },
@@ -159,8 +159,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-21T07:30:51.360713Z",
-     "start_time": "2022-06-21T07:30:51.353887Z"
+     "end_time": "2022-06-21T07:57:01.492057Z",
+     "start_time": "2022-06-21T07:57:01.485352Z"
     }
    },
    "outputs": [
@@ -250,8 +250,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-21T07:30:51.369096Z",
-     "start_time": "2022-06-21T07:30:51.362504Z"
+     "end_time": "2022-06-21T07:57:01.500102Z",
+     "start_time": "2022-06-21T07:57:01.493760Z"
     }
    },
    "outputs": [
@@ -320,8 +320,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-21T07:30:51.383815Z",
-     "start_time": "2022-06-21T07:30:51.371006Z"
+     "end_time": "2022-06-21T07:57:01.514993Z",
+     "start_time": "2022-06-21T07:57:01.502466Z"
     }
    },
    "outputs": [
@@ -353,34 +353,34 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>message.descriptions.item_3</td>\n",
-       "      <td>this is description3</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>2</th>\n",
+       "      <td>message.title</td>\n",
+       "      <td>sample title edit!</td>\n",
+       "      <td>sample title</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>3</th>\n",
        "      <td>message.descriptions.item_other</td>\n",
        "      <td>NaN</td>\n",
        "      <td>this is description other</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>4</th>\n",
        "      <td>message.descriptions.item_2</td>\n",
        "      <td>this is description2 edit!</td>\n",
        "      <td>this is description2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>message.othertitle</td>\n",
+       "      <th>5</th>\n",
+       "      <td>message.descriptions.item_3</td>\n",
+       "      <td>this is description3</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>sample other title</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>message.title</td>\n",
-       "      <td>sample title edit!</td>\n",
-       "      <td>sample title</td>\n",
+       "      <td>message.othertitle</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>sample other title</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -388,18 +388,18 @@
       ],
       "text/plain": [
        "                               key                    val_left  \\\n",
-       "0      message.descriptions.item_3        this is description3   \n",
-       "1  message.descriptions.item_other                         NaN   \n",
-       "2      message.descriptions.item_2  this is description2 edit!   \n",
-       "4               message.othertitle                         NaN   \n",
-       "6                    message.title          sample title edit!   \n",
+       "2                    message.title          sample title edit!   \n",
+       "3  message.descriptions.item_other                         NaN   \n",
+       "4      message.descriptions.item_2  this is description2 edit!   \n",
+       "5      message.descriptions.item_3        this is description3   \n",
+       "6               message.othertitle                         NaN   \n",
        "\n",
        "                   val_right  \n",
-       "0                        NaN  \n",
-       "1  this is description other  \n",
-       "2       this is description2  \n",
-       "4         sample other title  \n",
-       "6               sample title  "
+       "2               sample title  \n",
+       "3  this is description other  \n",
+       "4       this is description2  \n",
+       "5                        NaN  \n",
+       "6         sample other title  "
       ]
      },
      "execution_count": 6,
@@ -424,8 +424,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-21T07:30:51.398412Z",
-     "start_time": "2022-06-21T07:30:51.385705Z"
+     "end_time": "2022-06-21T07:57:01.529470Z",
+     "start_time": "2022-06-21T07:57:01.516890Z"
     }
    },
    "outputs": [
@@ -457,34 +457,34 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>message.descriptions.item_3</td>\n",
-       "      <td>this is description3</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>2</th>\n",
+       "      <td>message.title</td>\n",
+       "      <td>sample title edit!</td>\n",
+       "      <td>sample title</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>3</th>\n",
        "      <td>message.descriptions.item_other</td>\n",
        "      <td>NaN</td>\n",
        "      <td>this is description other</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>4</th>\n",
        "      <td>message.descriptions.item_2</td>\n",
        "      <td>this is description2 edit!</td>\n",
        "      <td>this is description2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>message.othertitle</td>\n",
+       "      <th>5</th>\n",
+       "      <td>message.descriptions.item_3</td>\n",
+       "      <td>this is description3</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>sample other title</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>message.title</td>\n",
-       "      <td>sample title edit!</td>\n",
-       "      <td>sample title</td>\n",
+       "      <td>message.othertitle</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>sample other title</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -492,18 +492,18 @@
       ],
       "text/plain": [
        "                               key                    val_left  \\\n",
-       "0      message.descriptions.item_3        this is description3   \n",
-       "1  message.descriptions.item_other                         NaN   \n",
-       "2      message.descriptions.item_2  this is description2 edit!   \n",
-       "4               message.othertitle                         NaN   \n",
-       "6                    message.title          sample title edit!   \n",
+       "2                    message.title          sample title edit!   \n",
+       "3  message.descriptions.item_other                         NaN   \n",
+       "4      message.descriptions.item_2  this is description2 edit!   \n",
+       "5      message.descriptions.item_3        this is description3   \n",
+       "6               message.othertitle                         NaN   \n",
        "\n",
        "                   val_right  \n",
-       "0                        NaN  \n",
-       "1  this is description other  \n",
-       "2       this is description2  \n",
-       "4         sample other title  \n",
-       "6               sample title  "
+       "2               sample title  \n",
+       "3  this is description other  \n",
+       "4       this is description2  \n",
+       "5                        NaN  \n",
+       "6         sample other title  "
       ]
      },
      "execution_count": 7,
@@ -530,9 +530,10 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-21T07:30:51.418468Z",
-     "start_time": "2022-06-21T07:30:51.400298Z"
-    }
+     "end_time": "2022-06-21T07:57:01.543428Z",
+     "start_time": "2022-06-21T07:57:01.531315Z"
+    },
+    "scrolled": false
    },
    "outputs": [
     {
@@ -611,8 +612,93 @@
     }
    ],
    "source": [
-    "replaced_df = dict_util.update_dict_df_val(en_r_df, en_l_df)\n",
-    "replaced_df"
+    "new_en_r_df = dict_util.update_dict_df_val(en_r_df, en_l_df)\n",
+    "new_en_r_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### df_to_dict\n",
+    "convert df ( result of `dict_to_df` or `update_dict_df_val` ) to dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-06-21T07:57:01.565587Z",
+     "start_time": "2022-06-21T07:57:01.545485Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/kaikeda/pj/dict_util/dict_util/dict_util.py:37: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  other_df['t_key'] = other_df['key']\n",
+      "/Users/kaikeda/pj/dict_util/dict_util/dict_util.py:38: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  other_df['key'] = np.nan\n",
+      "/Users/kaikeda/pj/dict_util/dict_util/dict_util.py:27: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df['t_key'] = tmp[0]\n",
+      "/Users/kaikeda/pj/dict_util/dict_util/dict_util.py:28: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df['key'] = tmp[1]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'message': {'title': 'sample title edit!',\n",
+       "  'subtitle': 'sample sub title',\n",
+       "  'othertitle': 'sample other title',\n",
+       "  'descriptions': {'item_1': 'this is description1',\n",
+       "   'item_2': 'this is description2 edit!',\n",
+       "   'item_other': 'this is description other'}}}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_en_r_dict = dict_util.df_to_dict(new_en_r_df)\n",
+    "new_en_r_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-06-21T07:57:01.572784Z",
+     "start_time": "2022-06-21T07:57:01.569647Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "s = json.dumps(new_en_r_dict, ensure_ascii=False)\n",
+    "with open(f'sample/new_en_r.json', mode='w') as f:\n",
+    "    f.write(s)"
    ]
   }
  ],
